# django-easy-wechat

./: .gitignore  README.md  setup.cfg  setup.py
src/dewechat/: __init__.py
src/tests/: __init__.py
